# nikos912000.github.io

./: .gitignore  README.md  _config.yml  index.html  main.py  pyproject.toml  pyscript.toml  requirements.txt
_includes/: about.html  contact.html  experiences.html  footer.html  head.html  header.html  projects.html
_posts/: 1-1-1-experiences.markdown  1-1-1-projects.markdown  1-1-2-projects.markdown  2017-04-27-projects.markdown  2017-04-28-projects.markdown  2017-04-29-experiences.markdown
_site/: index.html
_site/experiences/2001/01/01/experiences/: index.html
_site/experiences/2017/04/29/experiences/: index.html
_site/projects/2001/01/01/projects/: index.html
_site/projects/2001/01/02/projects/: index.html
_site/projects/2017/04/27/projects/: index.html
_site/projects/2017/04/28/projects/: index.html
_site/services/2014/09/22/services-2/: index.html
_site/services/2014/09/23/services-3/: index.html
