[tool.poetry]
name = "nikos912000-github-io"
version = "0.1.0"
description = ""
authors = ["Nikos Katirtzis"]
readme = "README.md"
packages = [{include = "nikos912000"}]

[tool.poetry.dependencies]
python = "^3.13"
pyscript = "0.3.3"
pyscript-ltk = "0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
